<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/fondo"
    android:padding="50dp"
    android:layout_height="match_parent"
    tools:context=".AgregarTarea">
    <TextView
        android:id="@+id/agregart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:text="@string/Agregar"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/agregart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/titulo1"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:text="@string/Atitulo"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/titIng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:hint="@string/EscribaAqui"
            android:textColor="@color/white"
            android:textColorHint="#878484"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/titulo2"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:text="@string/Ades"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/desIng"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_marginTop="15dp"
            android:gravity="left"
            android:hint="@string/EscribaAqui"
            android:textColor="@color/white"
            android:textColorHint="#878484"
            android:textSize="20sp"
            android:autofillHints="" />
        <Button
            android:id="@+id/Aguardar"
            android:text="@string/Aguardar"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/Asalir"
            android:text="@string/Bsalir"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>