<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    android:background="@color/fondo"
    tools:context=".MisNotas">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:gravity="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="30sp"
            android:text="@string/Ptitulo"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/BMagregar"
                android:backgroundTint="@color/black"
                android:layout_width="wrap_content"
                android:text="@string/Magregar"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/realizada"
                android:backgroundTint="@color/black"
                android:text="@string/Realizada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
            <ListView
                android:layout_gravity="center"
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </ListView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>