<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:padding="50dp"
    tools:context=".editarNota">

    <EditText
        android:id="@+id/Etitulo1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="titulo"
        android:textColor="@color/white"
        android:textColorHint="#777575"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Edes1"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="50dp"
        android:hint="Descripcion"
        android:textColor="@color/white"
        android:textColorHint="#8A8787"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Etitulo1" />

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Edes1">

        <Button
            android:id="@+id/Eguardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/Aguardar"
            android:textSize="20sp" />

        <Button
            android:id="@+id/Eborrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/MborrarT"
            android:textSize="20sp" />
    </LinearLayout>
    <Button
        android:id="@+id/ATrealizadas"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/black"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ll1"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/ARealizada"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>